[package]
name = "inferadb-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
# HTTP client for calling APIs
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.18", features = ["v4", "serde"] }

# JWT generation for tests (match server configuration)
jsonwebtoken = { version = "10.1", default-features = false, features = ["aws_lc_rs", "ed25519-dalek", "use_pem"] }

# Ed25519 signing for test tokens
ed25519-dalek = "2.2"
rand = "0.9"

# Base64 encoding
base64 = "0.22"

# Testing utilities
anyhow = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Assertions
assert_matches = "1.5"

[dev-dependencies]
# No additional dev dependencies needed

[[test]]
name = "integration"
path = "integration/mod.rs"
harness = true
