[package]
edition = "2024"
name = "inferadb-integration-tests"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[dependencies]
# HTTP client for calling APIs
reqwest = { version = "0.13", features = ["cookies", "json"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.20", features = ["serde", "v4"] }

# JWT generation for tests (match server configuration)
jsonwebtoken = { version = "10.2", default-features = false, features = [
  "aws_lc_rs",
  "ed25519-dalek",
  "use_pem",
] }

# Ed25519 signing for test tokens
ed25519-dalek = "2.2"
rand = "0.9"

# Base64 encoding
base64 = "0.22"

# Testing utilities
anyhow = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Assertions
assert_matches = "1.5"

[dev-dependencies]
# No additional dev dependencies needed

[features]
# Testing (not for production use)
integration-tests = []

[[test]]
harness = true
name = "integration"
path = "integration/mod.rs"
required-features = ["integration-tests"]
